Scan recursevely coxigen done

--- a/Doxygen documentation/latex/_cut_8h.tex
+++ b/Doxygen documentation/latex/_cut_8h.tex
@@ -14,9 +14,9 @@ void \mbox{\hyperlink{_cut_8h_a18a2aae538ddaae3f0e111969fd20111}{ask\+Name}} (ch
 \item 
 int \mbox{\hyperlink{_cut_8h_ab35e175ef92b0a09d11eade80c803c15}{intro}} ()
 \item 
-void \mbox{\hyperlink{_cut_8h_ac6cf1cc8abe38959f3638c4b6d791e0d}{init\+Game}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int avaiblep\mbox{[}6\mbox{]}, int dim)
+void \mbox{\hyperlink{_cut_8h_ac6cf1cc8abe38959f3638c4b6d791e0d}{init\+Game}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int avaiblep\mbox{[}6\mbox{]}, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}})
 \item 
-void \mbox{\hyperlink{_cut_8h_a3de115086c75040b94838386ba16902b}{init\+Game\+MP}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int avaible\+MP\mbox{[}6\mbox{]}, int dim)
+void \mbox{\hyperlink{_cut_8h_a3de115086c75040b94838386ba16902b}{init\+Game\+MP}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int avaible\+MP\mbox{[}6\mbox{]}, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}})
 \item 
 void \mbox{\hyperlink{_cut_8h_ac60705307c9228dac45d51d603e9fb77}{init\+Score}} (int $\ast$score)
 \item 
@@ -28,15 +28,15 @@ void \mbox{\hyperlink{_cut_8h_afad99cae6255fb630bef1ba9a484af9f}{intro\+MPDynami
 \item 
 void \mbox{\hyperlink{_cut_8h_af90f106fad12831a2806a540acc4bc91}{intro\+MPDynamic\+PC}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$color\+Piece, char $\ast$color\+Mode, int score, int center, char player)
 \item 
-void \mbox{\hyperlink{_cut_8h_a5486ee999c7c672bd64802a3311a5e28}{intro\+MP2\+PC}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$color\+Mode, int $\ast$score, int $\ast$score1, char $\ast$color1, char $\ast$color2, char name\mbox{[}20\mbox{]})
+void \mbox{\hyperlink{_cut_8h_a5486ee999c7c672bd64802a3311a5e28}{intro\+MP2\+PC}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$color\+Mode, int $\ast$score, int $\ast$score1, char $\ast$\mbox{\hyperlink{main_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{main_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char name\mbox{[}20\mbox{]})
 \item 
-void \mbox{\hyperlink{_cut_8h_ad013642412c359a29bc8a25d9628af4f}{intro\+MP2}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$color\+Mode, int $\ast$score, int $\ast$score1, char $\ast$color1, char $\ast$color2, char name1\mbox{[}20\mbox{]}, char name2\mbox{[}20\mbox{]})
+void \mbox{\hyperlink{_cut_8h_ad013642412c359a29bc8a25d9628af4f}{intro\+MP2}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$color\+Mode, int $\ast$score, int $\ast$score1, char $\ast$\mbox{\hyperlink{main_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{main_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char name1\mbox{[}20\mbox{]}, char name2\mbox{[}20\mbox{]})
 \item 
 void \mbox{\hyperlink{_cut_8h_ad9877321139162ae1207fd239f48ea43}{update\+Av\+Pieces}} (int avaiblep\mbox{[}6\mbox{]}, int selected\+SM, int drawn)
 \item 
-void \mbox{\hyperlink{_cut_8h_a31d08c0c40d8f48175b75e48f8412c8b}{select\+Process}} (int avaiblep\mbox{[}6\mbox{]}, int dim, int $\ast$selected\+SM, int $\ast$rotation, int $\ast$drawn, int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, char $\ast$color\+Mode, char $\ast$color\+Piece)
+void \mbox{\hyperlink{_cut_8h_a31d08c0c40d8f48175b75e48f8412c8b}{select\+Process}} (int avaiblep\mbox{[}6\mbox{]}, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$selected\+SM, int $\ast$rotation, int $\ast$drawn, int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, char $\ast$color\+Mode, char $\ast$color\+Piece)
 \item 
-void \mbox{\hyperlink{_cut_8h_ae1436a9803c69c5bd7b6ff9355bed613}{select\+Process\+PC}} (int avaiblep\mbox{[}6\mbox{]}, int dim, int $\ast$selected\+SM, int $\ast$rotation, int $\ast$drawn, int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, char $\ast$color\+Mode, char $\ast$color\+Piece)
+void \mbox{\hyperlink{_cut_8h_ae1436a9803c69c5bd7b6ff9355bed613}{select\+Process\+PC}} (int avaiblep\mbox{[}6\mbox{]}, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$selected\+SM, int $\ast$rotation, int $\ast$drawn, int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, char $\ast$color\+Mode, char $\ast$color\+Piece)
 \item 
 int \mbox{\hyperlink{_cut_8h_a9cb7b2d3ea20c422a23e44936eb8e875}{avoid\+Pieces}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int sy, int selected, int rotation)
 \item 
@@ -52,9 +52,9 @@ int \mbox{\hyperlink{_cut_8h_a1d4d532ae9ededc1d84ef89e8fc3f992}{move\+Piece}} (i
 \item 
 int \mbox{\hyperlink{_cut_8h_af3f86220a64193d10c7eb528f3ab64ea}{move\+Piece\+MP}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map\+Enemy\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, int selected\+MP, int rotation, int $\ast$released, int $\ast$score, char $\ast$color\+Mode, char $\ast$color\+Piece, int center, char player, char name\mbox{[}20\mbox{]})
 \item 
-void \mbox{\hyperlink{_cut_8h_ae0a29bd1d44e72663fe0c6f9ec04bc6d}{game\+One\+VSOne}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, int $\ast$score, int $\ast$score1, int $\ast$drawn, int $\ast$drawn1, int $\ast$rotation, int $\ast$rotation1, int $\ast$released, int $\ast$released1, int $\ast$selected\+SM, int $\ast$selected\+MP, int avaiblep\+MP\mbox{[}6\mbox{]}, int dim, int $\ast$won, int $\ast$won1, int $\ast$winning, int $\ast$winning1, char $\ast$color\+Mode, char $\ast$color1, char $\ast$color2, char name1\mbox{[}20\mbox{]}, char name2\mbox{[}20\mbox{]})
+void \mbox{\hyperlink{_cut_8h_ae0a29bd1d44e72663fe0c6f9ec04bc6d}{game\+One\+VSOne}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, int $\ast$score, int $\ast$score1, int $\ast$drawn, int $\ast$drawn1, int $\ast$rotation, int $\ast$rotation1, int $\ast$released, int $\ast$released1, int $\ast$selected\+SM, int $\ast$selected\+MP, int avaiblep\+MP\mbox{[}6\mbox{]}, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$won, int $\ast$won1, int $\ast$winning, int $\ast$winning1, char $\ast$color\+Mode, char $\ast$\mbox{\hyperlink{main_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{main_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char name1\mbox{[}20\mbox{]}, char name2\mbox{[}20\mbox{]})
 \item 
-void \mbox{\hyperlink{_cut_8h_aceee05f2d5cc88b14ebf0fc4f714b8d3}{game\+One\+VSPC}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, int $\ast$score, int $\ast$score1, int $\ast$drawn, int $\ast$drawn1, int $\ast$rotation, int $\ast$rotation1, int $\ast$released, int $\ast$released1, int $\ast$selected\+SM, int $\ast$selected\+MP, int avaiblep\+MP\mbox{[}6\mbox{]}, int dim, int $\ast$won, int $\ast$won1, int $\ast$winning, int $\ast$winning1, char $\ast$color\+Mode, char $\ast$color1, char $\ast$color2, char name\mbox{[}20\mbox{]})
+void \mbox{\hyperlink{_cut_8h_aceee05f2d5cc88b14ebf0fc4f714b8d3}{game\+One\+VSPC}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y, int $\ast$score, int $\ast$score1, int $\ast$drawn, int $\ast$drawn1, int $\ast$rotation, int $\ast$rotation1, int $\ast$released, int $\ast$released1, int $\ast$selected\+SM, int $\ast$selected\+MP, int avaiblep\+MP\mbox{[}6\mbox{]}, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$won, int $\ast$won1, int $\ast$winning, int $\ast$winning1, char $\ast$color\+Mode, char $\ast$\mbox{\hyperlink{main_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{main_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char name\mbox{[}20\mbox{]})
 \end{DoxyCompactItemize}
 
 
