--- a/Doxygen documentation/latex/_initializer_8h_source.tex
+++ b/Doxygen documentation/latex/_initializer_8h_source.tex
@@ -3,26 +3,26 @@
 \mbox{\hyperlink{_initializer_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{1 }
-\DoxyCodeLine{5 \textcolor{keywordtype}{void} \mbox{\hyperlink{_initializer_8h_a3c193f4a435c0a6e3c521047d5c56a6d}{initMap}}(\textcolor{keywordtype}{int} map[15][10])\{}
-\DoxyCodeLine{6     \textcolor{keywordtype}{int} i, j;}
-\DoxyCodeLine{7     \textcolor{keywordflow}{for}(i = 0; i < height; i++)\{}
-\DoxyCodeLine{8         \textcolor{keywordflow}{for}(j = 0; j < width; j++)\{}
-\DoxyCodeLine{9             map[i][j] = 0;}
-\DoxyCodeLine{10         \}}
-\DoxyCodeLine{11     \}}
-\DoxyCodeLine{12 \}}
-\DoxyCodeLine{13 }
-\DoxyCodeLine{22 \textcolor{keywordtype}{void} \mbox{\hyperlink{_initializer_8h_aae120d7676c71a9758569bcc70aa6678}{setCursor}}(\textcolor{keywordtype}{int} *x, \textcolor{keywordtype}{int} *y, \textcolor{keywordtype}{int} vx, \textcolor{keywordtype}{int} vy)\{}
-\DoxyCodeLine{23     *x = vx;}
-\DoxyCodeLine{24     *y = vy;}
-\DoxyCodeLine{25 \}}
-\DoxyCodeLine{26 }
-\DoxyCodeLine{34 \textcolor{keywordtype}{void} \mbox{\hyperlink{_initializer_8h_aa28b44bd9035c5570c5b36df4707657e}{initAvaiblePieces}}(\textcolor{keywordtype}{int} *pieces, \textcolor{keywordtype}{int} dim, \textcolor{keywordtype}{int} limit)\{ \textcolor{comment}{/* T  Z  I  L Lr  O */}}
-\DoxyCodeLine{35     \textcolor{keywordtype}{int} i;                                    \textcolor{comment}{/* 0  1  2  3  4  5 */}}
-\DoxyCodeLine{36     \textcolor{keywordflow}{for}(i = 0; i < dim; i++)\{}
-\DoxyCodeLine{37         pieces[i] = limit;}
-\DoxyCodeLine{38     \}}
-\DoxyCodeLine{39 \}}
-\DoxyCodeLine{40 }
+\DoxyCodeLine{11 \textcolor{keywordtype}{void} \mbox{\hyperlink{_initializer_8h_a3c193f4a435c0a6e3c521047d5c56a6d}{initMap}}(\textcolor{keywordtype}{int} map[15][10])\{}
+\DoxyCodeLine{12     \textcolor{keywordtype}{int} i, j;}
+\DoxyCodeLine{13     \textcolor{keywordflow}{for}(i = 0; i < \mbox{\hyperlink{main_8c_ad13e9131f5062934438fa82334e4b2ee}{height}}; i++)\{}
+\DoxyCodeLine{14         \textcolor{keywordflow}{for}(j = 0; j < \mbox{\hyperlink{main_8c_a837aabdd54757cb86d0f66387511753f}{width}}; j++)\{}
+\DoxyCodeLine{15             map[i][j] = 0;}
+\DoxyCodeLine{16         \}}
+\DoxyCodeLine{17     \}}
+\DoxyCodeLine{18 \}}
+\DoxyCodeLine{19 }
+\DoxyCodeLine{28 \textcolor{keywordtype}{void} \mbox{\hyperlink{_initializer_8h_aae120d7676c71a9758569bcc70aa6678}{setCursor}}(\textcolor{keywordtype}{int} *x, \textcolor{keywordtype}{int} *y, \textcolor{keywordtype}{int} vx, \textcolor{keywordtype}{int} vy)\{}
+\DoxyCodeLine{29     *x = vx;}
+\DoxyCodeLine{30     *y = vy;}
+\DoxyCodeLine{31 \}}
+\DoxyCodeLine{32 }
+\DoxyCodeLine{40 \textcolor{keywordtype}{void} \mbox{\hyperlink{_initializer_8h_aa28b44bd9035c5570c5b36df4707657e}{initAvaiblePieces}}(\textcolor{keywordtype}{int} *pieces, \textcolor{keywordtype}{int} \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, \textcolor{keywordtype}{int} limit)\{ \textcolor{comment}{/* T  Z  I  L Lr  O */}}
+\DoxyCodeLine{41     \textcolor{keywordtype}{int} i;                                    \textcolor{comment}{/* 0  1  2  3  4  5 */}}
+\DoxyCodeLine{42     \textcolor{keywordflow}{for}(i = 0; i < \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}; i++)\{}
+\DoxyCodeLine{43         pieces[i] = limit;}
+\DoxyCodeLine{44     \}}
+\DoxyCodeLine{45 \}}
+\DoxyCodeLine{46 }
 
 \end{DoxyCode}
