--- a/Doxygen documentation/latex/dir_b0856f6b0d80ccb263b2f415c91f9e17.tex
+++ b/Doxygen documentation/latex/dir_b0856f6b0d80ccb263b2f415c91f9e17.tex
@@ -6,14 +6,14 @@
 file \mbox{\hyperlink{_cut_8h}{Cut.\+h}}
 \begin{DoxyCompactList}\small\item\em A summary of all the functions that would have made the main file be hard to read. \end{DoxyCompactList}\item 
 file \mbox{\hyperlink{_draw_pieces_8h}{Draw\+Pieces.\+h}}
-\item 
+\begin{DoxyCompactList}\small\item\em Draw or delete all the tetramini inside the map (each one with all its rotations) \end{DoxyCompactList}\item 
 file \mbox{\hyperlink{_extra_8h}{Extra.\+h}}
-\item 
+\begin{DoxyCompactList}\small\item\em Functions which are not really needed to play the game. \end{DoxyCompactList}\item 
 file \mbox{\hyperlink{_initializer_8h}{Initializer.\+h}}
-\item 
+\begin{DoxyCompactList}\small\item\em Set everything to play a match. \end{DoxyCompactList}\item 
 file \mbox{\hyperlink{_logic_8h}{Logic.\+h}}
-\item 
+\begin{DoxyCompactList}\small\item\em Implements some logical process during a match. \end{DoxyCompactList}\item 
 file \mbox{\hyperlink{_print_8h}{Print.\+h}}
-\item 
+\begin{DoxyCompactList}\small\item\em Prints out everything to play a match. \end{DoxyCompactList}\item 
 file \mbox{\hyperlink{_text_settings_8h}{Text\+Settings.\+h}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Lets some text changes. \end{DoxyCompactList}\end{DoxyCompactItemize}
