--- a/Doxygen documentation/latex/main_8c.tex
+++ b/Doxygen documentation/latex/main_8c.tex
@@ -66,61 +66,61 @@ Main Function, contains the main game loop
 \hline
 \end{DoxyParams}
 \begin{DoxySeeAlso}{See also}
-load\+Game() 
+\mbox{\hyperlink{_extra_8h_ab31643a884d56d21baa151f155d93b26}{load\+Game()}} 
 
-intro() 
+\mbox{\hyperlink{_cut_8h_ab35e175ef92b0a09d11eade80c803c15}{intro()}} 
 
-init\+Game() 
+\mbox{\hyperlink{_cut_8h_ac6cf1cc8abe38959f3638c4b6d791e0d}{init\+Game()}} 
 
-set\+Cursor() 
+\mbox{\hyperlink{_initializer_8h_aae120d7676c71a9758569bcc70aa6678}{set\+Cursor()}} 
 
-init\+Score() 
+\mbox{\hyperlink{_cut_8h_ac60705307c9228dac45d51d603e9fb77}{init\+Score()}} 
 
-update\+Score\+SM() 
+\mbox{\hyperlink{_logic_8h_a0260142fa170a80c2fdb27c4a94c4536}{update\+Score\+SM()}} 
 
-intro\+SDynamic() 
+\mbox{\hyperlink{_cut_8h_a1515458ebe31caafde5c67c95e8cb9ff}{intro\+SDynamic()}} 
 
-select\+Process() 
+\mbox{\hyperlink{_cut_8h_a31d08c0c40d8f48175b75e48f8412c8b}{select\+Process()}} 
 
-move\+Piece() 
+\mbox{\hyperlink{_cut_8h_a1d4d532ae9ededc1d84ef89e8fc3f992}{move\+Piece()}} 
 
-check\+End\+Game() 
+\mbox{\hyperlink{_logic_8h_ac993c9fce28666b89ab798f7c7e79c32}{check\+End\+Game()}} 
 
-setcolor\+Text() 
+\mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setcolor\+Text()}} 
 
-who\+Enemy() 
+\mbox{\hyperlink{_logic_8h_afa4b35c44b2a4924a676ddc2aa408f95}{who\+Enemy()}} 
 
-init\+Game\+MP() 
+\mbox{\hyperlink{_cut_8h_a3de115086c75040b94838386ba16902b}{init\+Game\+MP()}} 
 
-ask\+Name() 
+\mbox{\hyperlink{_cut_8h_a18a2aae538ddaae3f0e111969fd20111}{ask\+Name()}} 
 
-game\+One\+VSPC() 
+\mbox{\hyperlink{_cut_8h_aceee05f2d5cc88b14ebf0fc4f714b8d3}{game\+One\+VSPC()}} 
 
-game\+One\+VSOne() 
+\mbox{\hyperlink{_cut_8h_ae0a29bd1d44e72663fe0c6f9ec04bc6d}{game\+One\+VSOne()}} 
 
-print\+Title() 
+\mbox{\hyperlink{_print_8h_a5564a74283c7de4315aa6c31e3a18cd1}{print\+Title()}} 
 
-print\+Move\+Menu() 
+\mbox{\hyperlink{_print_8h_ad5deb4d6da93418db2c13080bae46bdc}{print\+Move\+Menu()}} 
 
-salta\+Righe() 
+\mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta\+Righe()}} 
 
-goto\+XY() 
+\mbox{\hyperlink{_extra_8h_aa294b49bfcc17cf4b490fb020e359851}{goto\+XY()}} 
 
-print\+Legenda\+Pieces() 
+\mbox{\hyperlink{_print_8h_ae77770b22209ba7e20e82bbe37cc2b25}{print\+Legenda\+Pieces()}} 
 
-print\+Legenda\+All\+Pieces() 
+\mbox{\hyperlink{_print_8h_a5c0024f7636f893e7c57e72c6f0e7f93}{print\+Legenda\+All\+Pieces()}} 
 
-center\+Text() 
+\mbox{\hyperlink{_text_settings_8h_af668614eb7df53d77d3891b7cc514eb1}{center\+Text()}} 
 
-init\+Map() 
+\mbox{\hyperlink{_initializer_8h_a3c193f4a435c0a6e3c521047d5c56a6d}{init\+Map()}} 
 
-fill\+One() 
+\mbox{\hyperlink{_extra_8h_ade365d5befabc715613a08d8248d5aea}{fill\+One()}} 
 
-print\+Maps() 
+\mbox{\hyperlink{_print_8h_a2875dfc0ecfe0639e759d9814d48f52e}{print\+Maps()}} 
 
-delay() 
+\mbox{\hyperlink{_extra_8h_aa38551f4c09a2a9e3b9a08715d986973}{delay()}} 
 
-close\+Game() 
+\mbox{\hyperlink{_extra_8h_ae3629e6aee96848a9799d6706b42aa3d}{close\+Game()}} 
 \end{DoxySeeAlso}
 
 
