--- a/Doxygen documentation/latex/refman.tex
+++ b/Doxygen documentation/latex/refman.tex
@@ -175,6 +175,8 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
+\chapter{X-\/\+Tetris}
+\label{index}\hypertarget{index}{}\input{index}
 \chapter{File Index}
 \input{files}
 \chapter{File Documentation}
@@ -192,6 +194,7 @@
 \input{_print_8h_source}
 \input{_text_settings_8h}
 \input{_text_settings_8h_source}
+\input{main_8c}
 %--- End generated contents ---
 % Index
   \backmatter
