--- a/Doxygen documentation/latex/_draw_pieces_8h.tex
+++ b/Doxygen documentation/latex/_draw_pieces_8h.tex
@@ -1,5 +1,10 @@
 \hypertarget{_draw_pieces_8h}{}\doxysection{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\+Draw\+Pieces.h File Reference}
 \label{_draw_pieces_8h}\index{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/DrawPieces.h@{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/DrawPieces.h}}
+
+
+Draw or delete all the tetramini inside the map (each one with all its rotations)  
+
+
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -79,6 +84,14 @@ int \mbox{\hyperlink{_draw_pieces_8h_a1f0f37fcbe16c992da82419f30c529e6}{drawO}} 
 \item 
 void \mbox{\hyperlink{_draw_pieces_8h_a5a44fc57ffb4aa81cd29e755e532010b}{deleteO}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int x, int y)
 \end{DoxyCompactItemize}
+
+
+\doxysubsection{Detailed Description}
+Draw or delete all the tetramini inside the map (each one with all its rotations) 
+
+\begin{DoxyAuthor}{Author}
+Vineet 
+\end{DoxyAuthor}
 
 
 \doxysubsection{Function Documentation}
