--- a/Doxygen documentation/latex/_extra_8h.tex
+++ b/Doxygen documentation/latex/_extra_8h.tex
@@ -1,5 +1,10 @@
 \hypertarget{_extra_8h}{}\doxysection{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\+Extra.h File Reference}
 \label{_extra_8h}\index{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/Extra.h@{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/Extra.h}}
+
+
+Functions which are not really needed to play the game.  
+
+
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -15,6 +20,14 @@ int \mbox{\hyperlink{_extra_8h_acd245ad1ccba04eebd92376ea44cb41d}{clean\+\_\+std
 \item 
 void \mbox{\hyperlink{_extra_8h_ade365d5befabc715613a08d8248d5aea}{fill\+One}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]})
 \end{DoxyCompactItemize}
+
+
+\doxysubsection{Detailed Description}
+Functions which are not really needed to play the game. 
+
+\begin{DoxyAuthor}{Author}
+Vineet (with some third part of codes) 
+\end{DoxyAuthor}
 
 
 \doxysubsection{Function Documentation}
