--- a/Doxygen documentation/latex/_logic_8h.tex
+++ b/Doxygen documentation/latex/_logic_8h.tex
@@ -1,11 +1,16 @@
 \hypertarget{_logic_8h}{}\doxysection{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\+Logic.h File Reference}
 \label{_logic_8h}\index{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/Logic.h@{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/Logic.h}}
+
+
+Implements some logical process during a match.  
+
+
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-int \mbox{\hyperlink{_logic_8h_a1970eaa9e312cd74d102b660684ae60d}{check\+Avaible}} (int $\ast$pieces, int dim, int selected)
+int \mbox{\hyperlink{_logic_8h_a1970eaa9e312cd74d102b660684ae60d}{check\+Avaible}} (int $\ast$pieces, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int selected)
 \item 
-int \mbox{\hyperlink{_logic_8h_a8a177e9cdae096c627c34a7af3259f47}{select\+Piece}} (int $\ast$pieces, int dim, char $\ast$color\+Piece)
+int \mbox{\hyperlink{_logic_8h_a8a177e9cdae096c627c34a7af3259f47}{select\+Piece}} (int $\ast$pieces, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, char $\ast$color\+Piece)
 \item 
 int \mbox{\hyperlink{_logic_8h_a368eec4ffe984c02c5cf96bf6b6f0add}{select\+Rotation}} (char $\ast$color\+Piece)
 \item 
@@ -27,7 +32,7 @@ void \mbox{\hyperlink{_logic_8h_a324846e6d5e158c401990ebbb9e584c9}{invert\+Enemy
 \item 
 int \mbox{\hyperlink{_logic_8h_a37d6817948e584c4f3fd4a8d72ed3a1d}{update\+Score\+MP2}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int $\ast$score)
 \item 
-void \mbox{\hyperlink{_logic_8h_ac993c9fce28666b89ab798f7c7e79c32}{check\+End\+Game}} (int avaiblep\mbox{[}6\mbox{]}, int dim, int $\ast$won)
+void \mbox{\hyperlink{_logic_8h_ac993c9fce28666b89ab798f7c7e79c32}{check\+End\+Game}} (int avaiblep\mbox{[}6\mbox{]}, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, int $\ast$won)
 \item 
 void \mbox{\hyperlink{_logic_8h_a333725dd882aacbc83cb91a13cba04ab}{check\+Win\+MP}} (char name\mbox{[}20\mbox{]}, char name1\mbox{[}20\mbox{]}, int score, int score1)
 \item 
@@ -35,6 +40,14 @@ void \mbox{\hyperlink{_logic_8h_a7ae65784891006a5afc1c0212ad86a54}{check\+Win\+M
 \item 
 int \mbox{\hyperlink{_logic_8h_afa4b35c44b2a4924a676ddc2aa408f95}{who\+Enemy}} ()
 \end{DoxyCompactItemize}
+
+
+\doxysubsection{Detailed Description}
+Implements some logical process during a match. 
+
+\begin{DoxyAuthor}{Author}
+Vineet 
+\end{DoxyAuthor}
 
 
 \doxysubsection{Function Documentation}
