--- a/Doxygen documentation/latex/_print_8h.tex
+++ b/Doxygen documentation/latex/_print_8h.tex
@@ -1,13 +1,18 @@
 \hypertarget{_print_8h}{}\doxysection{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\+Print.h File Reference}
 \label{_print_8h}\index{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/Print.h@{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/Print.h}}
+
+
+Prints out everything to play a match.  
+
+
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{_print_8h_a2aa18c495cf17747e69b7fc8d45fe437}{print\+Map}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]})
 \item 
-void \mbox{\hyperlink{_print_8h_a1dd3cf15452a5093ce71f8d9ec956e9c}{print\+Map\+Color}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$color1, char $\ast$color0, int center)
+void \mbox{\hyperlink{_print_8h_a1dd3cf15452a5093ce71f8d9ec956e9c}{print\+Map\+Color}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$\mbox{\hyperlink{main_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$color0, int center)
 \item 
-void \mbox{\hyperlink{_print_8h_a2875dfc0ecfe0639e759d9814d48f52e}{print\+Maps}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$color1, char $\ast$color2, char $\ast$color0)
+void \mbox{\hyperlink{_print_8h_a2875dfc0ecfe0639e759d9814d48f52e}{print\+Maps}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, int map1\mbox{[}15\mbox{]}\mbox{[}10\mbox{]}, char $\ast$\mbox{\hyperlink{main_8c_ad4b5e2b0713d831828332485842e91f1}{color1}}, char $\ast$\mbox{\hyperlink{main_8c_a7662939be01f9535a08f5a53d83d6c01}{color2}}, char $\ast$color0)
 \item 
 void \mbox{\hyperlink{_print_8h_a9c20781191d0dadbbcea017aab19e83f}{print\+Map2}} (int map\mbox{[}15\mbox{]}\mbox{[}10\mbox{]})
 \item 
@@ -17,7 +22,7 @@ void \mbox{\hyperlink{_print_8h_ae5ced7d7e756c5e7cc57256ac6865aa3}{print\+Game\+
 \item 
 void \mbox{\hyperlink{_print_8h_af93aaa5be98af25bcbce45e2048fe1c5}{print\+SMode\+Options}} ()
 \item 
-void \mbox{\hyperlink{_print_8h_a7163d93faf2f9bfaf60660fa60164095}{print\+Avaible\+Pieces}} (int $\ast$pieces, int dim, char $\ast$color\+Mode, char $\ast$color\+Piece)
+void \mbox{\hyperlink{_print_8h_a7163d93faf2f9bfaf60660fa60164095}{print\+Avaible\+Pieces}} (int $\ast$pieces, int \mbox{\hyperlink{main_8c_afe4f94e033c0d1c57d407b4338a64b33}{dim}}, char $\ast$color\+Mode, char $\ast$color\+Piece)
 \item 
 void \mbox{\hyperlink{_print_8h_ae77770b22209ba7e20e82bbe37cc2b25}{print\+Legenda\+Pieces}} (char $\ast$color\+Mode, char $\ast$color\+Piece)
 \item 
@@ -37,6 +42,14 @@ void \mbox{\hyperlink{_print_8h_a9fbc1f7e744174b1dab9de2a2a923803}{print\+Loser}
 \item 
 void \mbox{\hyperlink{_print_8h_a277aa4d6daf83c78553264a2483b009a}{print\+Pareggio}} ()
 \end{DoxyCompactItemize}
+
+
+\doxysubsection{Detailed Description}
+Prints out everything to play a match. 
+
+\begin{DoxyAuthor}{Author}
+Vineet 
+\end{DoxyAuthor}
 
 
 \doxysubsection{Function Documentation}
