--- a/Doxygen documentation/latex/_text_settings_8h.tex
+++ b/Doxygen documentation/latex/_text_settings_8h.tex
@@ -1,5 +1,10 @@
 \hypertarget{_text_settings_8h}{}\doxysection{C\+:/\+Users/vinee/\+One\+Drive/\+Desktop/\+Uni/\+Programmazione\+\_\+e\+\_\+\+Laboratorio/\+Progetto\+Esame\+\_\+\+ANSI\+\_\+\+C/\+X-\/\+Tetris/src/include/\+Text\+Settings.h File Reference}
 \label{_text_settings_8h}\index{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/TextSettings.h@{C:/Users/vinee/OneDrive/Desktop/Uni/Programmazione\_e\_Laboratorio/ProgettoEsame\_ANSI\_C/X-\/Tetris/src/include/TextSettings.h}}
+
+
+Lets some text changes.  
+
+
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -9,6 +14,14 @@ void \mbox{\hyperlink{_text_settings_8h_a8d6d4d62e9c7c82b10b30b093e80b248}{setco
 \item 
 void \mbox{\hyperlink{_text_settings_8h_a0916589349f2d883bef905033b33278c}{salta\+Righe}} (int N)
 \end{DoxyCompactItemize}
+
+
+\doxysubsection{Detailed Description}
+Lets some text changes. 
+
+\begin{DoxyAuthor}{Author}
+Vineet 
+\end{DoxyAuthor}
 
 
 \doxysubsection{Function Documentation}
